Media player now sticks to the bottom, fixed navbar collapse

--- a/src/app/components/media-player/media-player.component.scss
+++ b/src/app/components/media-player/media-player.component.scss
@@ -12,4 +12,5 @@ input[type=range].horizontal {
 
  .custom-range::-moz-range-track {
     background-color: $dark-surface;
+    width: 100%;
  }
