--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .spy {
-    background-color: red;
+    background-color: mediumaquamarine;
 }
 .rmpm {
     padding:0;
